--- a/config/i3/config
+++ b/config/i3/config
@@ -206,8 +206,8 @@ bindsym $mod+Ctrl+Shift+0 mode "$mode_system"
 set $mode_system (e)xit, (r)eboot, (s)hutdown
 mode "$mode_system" {
     bindsym e exec --no-startup-id i3exit logout, mode "default"
-    bindsym r exec --no-startup-id i3exit reboot, mode "default"
-    bindsym s exec --no-startup-id i3exit shutdown, mode "default"
+    bindsym r exec --no-startup-id "reboot"
+    bindsym s exec --no-startup-id "shutdown now"
 
     # exit system mode: "Enter" or "Escape"
     bindsym Return mode "default"
