--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1039,3 +1039,9 @@ map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 # }}}
 
 map kitty_mod+shift+y move_window_to_tab
+
+
+# BEGIN_KITTY_THEME
+# Solarized Dark
+include current-theme.conf
+# END_KITTY_THEME
